# dnsctl

./: .gitignore  LICENSE  README.md  config.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/workflows/: deploy.yml
assets/: index-BpMZHCRh.css  index-D5Q9F7XC.js  index-a9pFgC2W.js  index-eXLJ-ZzJ.js
cli/: main.py
core/: cloudflare_client.py  diff_engine.py  git_manager.py  security.py  state_manager.py  sync_engine.py
dnsctl/: __init__.py  config.py
dnsctl/cli/: main.py
dnsctl/core/: cloudflare_client.py  commit_messages.py  diff_engine.py  git_manager.py  security.py  state_manager.py  sync_engine.py  validations.py
dnsctl/gui/: app.py  hover_anim.py  icons.py  theme.py
dnsctl/gui/controllers/: history_controller.py  main_controller.py  plan_controller.py  record_controller.py  record_editor_controller.py
dnsctl/gui/ui/: history_dialog.ui  login_dialog.ui  main_window.ui  plan_dialog.ui  record_editor.ui  unlock_dialog.ui
dnsctl/tui/: __init__.py  app.py  tui.tcss
dnsctl/tui/screens/: accounts.py  auth.py  confirm.py  dashboard.py  history.py  input_modal.py  plan.py  record_editor.py  records.py
gui/: app.py
gui/controllers/: history_controller.py  main_controller.py  plan_controller.py  record_controller.py  record_editor_controller.py
gui/ui/: history_dialog.ui  login_dialog.ui  main_window.ui  plan_dialog.ui  record_editor.ui
public/: CNAME
src/: App.jsx  index.css
src/components/: Features.jsx  Footer.jsx  GuiShowcase.jsx  Hero.jsx  HowItWorks.jsx  Install.jsx  Navbar.jsx
src/hooks/: useLatestExe.js
tests/: test_cloudflare_client.py  test_diff_engine.py  test_phase4.py  test_phase5.py  test_record_editor.py  test_security.py  test_state_manager.py  test_sync_engine.py
