[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsctl"
version = "1.0.0"
description = "Secure, version-controlled Cloudflare DNS manager with CLI and GUI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "dnsctl contributors" }]
keywords = ["cloudflare", "dns", "devops", "git", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "cryptography>=41.0",
    "keyring>=24.0",
    "click>=8.1",
    "PyQt6>=6.6",
    "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pyinstaller>=6.0",
]

[project.urls]
"Source" = "https://github.com/your-org/dnsctl"
"Issue Tracker" = "https://github.com/your-org/dnsctl/issues"

[project.scripts]
dnscli = "dnsctl.cli.main:cli"

[project.gui-scripts]
dnscli-g = "dnsctl.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dnsctl*"]

[tool.setuptools.package-data]
"dnsctl.gui" = ["ui/*.ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
